--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,7 +8,18 @@
     position: absolute;
     right: 0;
     bottom: 0;
-    color: #ddd;
+    font-size: 24px;
+    color: #000000;
+    padding: 3px;
+    display: inline-block;
+    text-decoration: none;
+}
+.footer_tgscan {
+    position: left;
+    right: 0;
+    bottom: 0;
+    font-size: 12px;
+    color: #bbb;
     padding: 3px;
     display: inline-block;
     text-decoration: none;
