--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,4 @@
- html, body, svg, #box {
+html, body, svg, #box {
     padding: 0;
     margin: 0;
     width: 100%;
@@ -6,7 +6,7 @@
 }
 .footer {
     position: absolute;
-    right: 0;
+    right: 5px;
     bottom: 0;
     font-size: 24px;
     color: #000000;
@@ -15,8 +15,8 @@
     text-decoration: none;
 }
 .footer_tgscan {
-    position: left;
-    right: 0;
+    position: absolute;
+    left: 5px;
     bottom: 0;
     font-size: 12px;
     color: #bbb;
